# sys-wireguard

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/agents/: AGENTS.md  sysmodule.agent.md
common/: CMakeLists.txt
common/include/swg/: config.h  control_service.h  hos_caps.h  ipc_codec.h  ipc_protocol.h  ipv4_tcp.h  ipv4_udp.h  log.h  result.h  state_machine.h  tunnel_dns.h  version.h  wg_crypto.h  wg_handshake.h  wg_profile.h
common/src/: config.cpp  hos_caps.cpp  ipc_codec.cpp  ipv4_tcp.cpp  ipv4_udp.cpp  log.cpp  state_machine.cpp  tunnel_dns.cpp  wg_crypto.cpp  wg_handshake.cpp  wg_profile.cpp
docs/: architecture.md  compatibility.md  config.ini  debugging.md  dns-mitm-plan.md  integration-harness.md  known-risks.md  moonlight-switch-integration.md  sample-config.ini  tasks.md  test-matrix.md  wireguard-backend.md
integration/: CMakeLists.txt
integration/src/: host_server.cpp  switch_main.cpp
manager/: CMakeLists.txt
manager/src/: main.cpp  switch_main.cpp
overlay/: CMakeLists.txt
overlay/src/: main.cpp
runtime/config/swg/: config.ini
sdk/: CMakeLists.txt
sdk/include/swg/: app_session.h  client.h  client_transport.h  compat_bridge.h  compat_bridge_c.h  enet_compat.h  moonlight.h  moonlight_bridge.h  moonlight_bridge_c.h  session_socket.h  switch_transport.h  tunnel_datagram.h  tunnel_stream.h
sdk/src/: app_session.cpp  client.cpp  compat_bridge.cpp  compat_bridge_internal.h  compat_bridge_switch.cpp  enet_compat.cpp  moonlight_bridge.cpp  session_socket.cpp  switch_transport.cpp  tunnel_datagram.cpp  tunnel_stream.cpp
sysmodule/: CMakeLists.txt  sysmodule.json  toolbox.json.in
sysmodule/include/swg_sysmodule/: experimental_dns_mitm.h  experimental_mitm.h  host_transport.h  local_service.h  mitm_observer_switch.h  socket_runtime.h  wg_engine.h
sysmodule/src/: experimental_dns_mitm.cpp  experimental_mitm.cpp  host_transport.cpp  local_service.cpp  main.cpp  mitm_observer_switch.cpp  socket_runtime.cpp  switch_main.cpp  wg_engine.cpp
tests/: CMakeLists.txt  config_tests.cpp  live_handshake_probe.cpp  live_integration_probe.cpp  live_moonlight_control_probe.cpp  mitm_scaffold_tests.cpp
